[package]
name = "twig"
version = "0.1.0"
authors = ["Dermot Haughey <hderms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde={version = "1.0.123", features = ["derive"]}
